# news_analyzer

./: .dockerignore  .gitignore  Dockerfile.airflow  README.md  api.yml  docker-compose.yml  instruction.md  pyproject.toml  rbc_crawler (1).ipynb  requirements.docker.txt  requirements.txt
dags/: dashboard_ner_metrics_dag.py  lenta_ingest_dag.py  news_unified_pipeline_dag.py  nlp_enrichment_dag.py  rbc_ingest_dag.py  retry_summaries_dag.py  semantic_dedup_dag.py  summaries_dag.py
scripts/: run_streamlit_local.sh  start_project.sh
src/news_analyzer/: __init__.py
tests/: conftest.py
tests/contract/: test_parsers_contract.py
tests/integration/: conftest.py  docker-compose.integration.yml  test_ner_dashboard_metrics_job_integration.py  test_ner_job_integration.py  test_opensearch_mappings.py  test_opensearch_repositories_integration.py  test_summary_jobs_integration.py
tests/unit/: test_app_settings.py  test_docs_sources_contract.py  test_domain_models.py  test_gigachat_client.py  test_hf_classification_model.py  test_lenta_collector.py  test_lenta_config.py  test_lenta_ingest_dag.py  test_lenta_ingest_failure_policy.py  test_lenta_parser.py  test_ner_dashboard_metrics_job.py  test_ner_job.py  test_ner_local_model.py  test_news_repository_retry.py  test_opensearch_client.py  test_opensearch_indices.py  test_opensearch_repositories.py  test_rbc_collector.py  test_rbc_config.py  test_rbc_ingest_failure_policy.py  test_rbc_parser.py  test_semantic_dedup.py  test_semantic_dedup_job.py  test_start_project_script_contract.py  test_streamlit_app_render.py  (+11 more)
(+57 files in other folders)
